--- a/Frontend/editCourse.html
+++ b/Frontend/editCourse.html
@@ -113,6 +113,8 @@
             });
             const data = await response.json();
 
+            console.log(data);
+
             if (response.ok) {
                 document.getElementById("title").value = data.title;
                 document.getElementById("description").value = data.description;
