--- a/Frontend/test.html
+++ b/Frontend/test.html
@@ -21,9 +21,10 @@
 
     <div class="text-center">
       <button id="btn-answers">Enviar respuestas</button>
+      <button id="btn-certificate" style="display: none;">Generar Certificado</button>
+      <p id="box-result"></p>
     </div>
-
-    <p id="box-result"></p>
+    
   </main>
 
   <script src="./js/api/test.js"></script>
