fix update error 2

--- a/Frontend/editModule.html
+++ b/Frontend/editModule.html
@@ -166,7 +166,7 @@
   </head>
   <body>
     <div class="form-container">
-      <h1>Crear Modulo</h1>
+      <h1>Editar Modulo</h1>
       <form id="form-add-module" class="d-flex">
         <div>
           <label for="course-module">Modulo del curso</label>
@@ -197,9 +197,7 @@
             </p>
           </div>
           <ul class="sortable-list" id="sortable-list-modules">
-            <li class="sortable-item" style="border: solid 1px #007bff;" id="now-element">
-              <span>Modulo Actual</span>
-            </li>
+   
           </ul>
         </div>
         <button type="submit">Guardar Cambios</button>
