--- a/Frontend/course.html
+++ b/Frontend/course.html
@@ -140,6 +140,7 @@
                 class="btn btn-success fw-semibold"
                 id="btn-final-test"
                 style="font-family: 'poppins', sans-serif"
+                disabled
               >
                 Realizar Prueba Final
               </button>
@@ -152,6 +153,7 @@
                   color: white;
                   font-family: 'poppins', sans-serif;
                 "
+                
               >
                 Editar Curso
               </button>
