--- a/Frontend/editVideo.html
+++ b/Frontend/editVideo.html
@@ -80,7 +80,7 @@
 
     <script>
       const TOKEN = localStorage.getItem("jwtToken");
-      const HOST = "http://localhost:8080"; // Cambia esto a la URL de tu API
+      const HOST = "https://devorbit-vk2z.onrender.com/"; // Cambia esto a la URL de tu API
       const videoId = new URLSearchParams(window.location.search).get(
         "videoId"
       );
