--- a/Frontend/success.html
+++ b/Frontend/success.html
@@ -77,7 +77,7 @@
 
     <script>
          const urlParams = new URLSearchParams(window.location.search);
-      const HOST = "http://localhost:8080";
+      const HOST = "https://devorbit-vk2z.onrender.com/";
       const TOKEN = urlParams.get("jwt");
 
       const getCurrentUser = async () => {
