--- a/Frontend/library.html
+++ b/Frontend/library.html
@@ -190,7 +190,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-      const HOST = "http://localhost:8080";
+      const HOST = "https://devorbit-vk2z.onrender.com/";
       const TOKEN = localStorage.getItem("jwtToken");
 
       document.addEventListener("DOMContentLoaded", async () => {
@@ -288,7 +288,7 @@
 }
 configurarCerrarSesion(); 
 
-const URL_API = 'http://localhost:8080/api/user/me';
+const URL_API = 'https://devorbit-vk2z.onrender.com/api/user/me';
 
 
 const elementos = {
