--- a/Frontend/createCourse.html
+++ b/Frontend/createCourse.html
@@ -166,7 +166,8 @@
         }
 
         try {
-          const response = await fetch("https://devorbit-vk2z.onrender.com/api/courses", {
+          const HOST = "https://devorbit-vk2z.onrender.com"
+          const response = await fetch(`${HOST}/api/courses`, {
             method: "POST",
             headers: {
               Authorization: `Bearer ${token}`, 
