--- a/Frontend/success.html
+++ b/Frontend/success.html
@@ -119,7 +119,7 @@
                 document.getElementById("message").innerText =
                   "¡El pago fue procesado exitosamente!";
                 const link = document.getElementById("redirectLink");
-                link.href = `/Frontend/course.html?courseId=${courseId}`;
+                link.href = `./course.html?courseId=${courseId}`;
                 link.style.display = "inline-block";
               } else {
                 document.getElementById("message").innerText =
