--- a/Frontend/CreateCourse.html
+++ b/Frontend/CreateCourse.html
@@ -166,7 +166,7 @@
         }
 
         try {
-          const response = await fetch("http://localhost:8080/api/courses", {
+          const response = await fetch("https://devorbit-vk2z.onrender.com/api/courses", {
             method: "POST",
             headers: {
               Authorization: `Bearer ${token}`, 
