--- a/Frontend/addModule.html
+++ b/Frontend/addModule.html
@@ -207,7 +207,7 @@
     </div>
 
     <script>
-      const HOST = "https://devorbit-vk2z.onrender.com/";
+      const HOST = "https://devorbit-vk2z.onrender.com";
       const getModulesByCourse = async (id) => {
         const TOKEN = localStorage.getItem("jwtToken");
        
