--- a/Frontend/editCourse.html
+++ b/Frontend/editCourse.html
@@ -111,6 +111,7 @@
                      "Authorization": "Bearer " + localStorage.getItem("jwtToken"),
                  },
              });
+             console.log(response);
              const data = await response.json();
  
              if (response.ok) {
