--- a/Frontend/editCourse.html
+++ b/Frontend/editCourse.html
@@ -125,6 +125,6 @@
              }
          });
      </script>
-     <script src="/Frontend/js/scripts/editCourse.js"></script>
+     <script src="./js/scripts/editCourse.js"></script>
  </body>
  </html>
