--- a/Frontend/addModule.html
+++ b/Frontend/addModule.html
@@ -246,8 +246,8 @@
 
       loadVideosSortableList();
     </script>
-    <script src="/Frontend/js/scripts/DragAndDropV2.js"></script>
-    <script src="/Frontend/js/scripts/addModule.js"></script>
+    <script src="./js/scripts/DragAndDropV2.js"></script>
+    <script src="./js/scripts/addModule.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
