--- a/Frontend/course.html
+++ b/Frontend/course.html
@@ -74,7 +74,7 @@
 
               const script = document.createElement("script");
               script.setAttribute("id", "drag-and-drop-script");
-              script.src = "/Frontend/js/scripts/DragAndDrop.js";
+              script.src = "./js/scripts/DragAndDrop.js";
               document.body.appendChild(script);
             });
         </script>
@@ -295,7 +295,7 @@
     <!-- Fin del container-fluid -->
 
     <script src="./js/api/course.js"></script>
-    <script src="/Frontend/js/scripts/FileInputScript.js"></script>
+    <script src="./js/scripts/FileInputScript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
