--- a/Frontend/editModule.html
+++ b/Frontend/editModule.html
@@ -213,7 +213,7 @@
         "idModule"
       );
 
-      const HOST = "https://devorbit-vk2z.onrender.com/";
+      const HOST = "https://devorbit-vk2z.onrender.com";
 
       const getModuleById = async () => {
         const TOKEN = localStorage.getItem("jwtToken");
