--- a/Frontend/editModule.html
+++ b/Frontend/editModule.html
@@ -282,8 +282,8 @@
       };
       loadVideosSortableList();
     </script>
-    <script src="/Frontend/js/scripts/DragAndDropV2.js"></script>
-    <script src="/Frontend/js/scripts/editModule.js"></script>
+    <script src="./js/scripts/DragAndDropV2.js"></script>
+    <script src="./js/scripts/editModule.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
