--- a/Frontend/success.html
+++ b/Frontend/success.html
@@ -126,7 +126,7 @@
               method: "POST",
             }
           )
-            .then((response) => response.json())
+            .then((response) => console.log(response))
             .then((data) => {
               console.log("Response data:", data);
               if (data.status === "success") {
@@ -139,12 +139,12 @@
                 document.getElementById("message").innerText =
                   "Error al completar el pago: " + data.message;
               }
-            });
-          // .catch(error => {
-          //     console.log("Error:", error);
-          //     console.error('Error al completar el pago:', error);
-          //     document.getElementById('message').innerText = "Ocurrió un error al procesar el pago.";
-          // });
+            })
+          .catch(error => {
+              console.log("Error:", error);
+              console.error('Error al completar el pago:', error);
+              document.getElementById('message').innerText = "Ocurrió un error al procesar el pago.";
+          });
         } else {
           document.getElementById("message").innerText =
             "No se pudo completar el pago. Faltan parámetros.";
