--- a/Frontend/success.html
+++ b/Frontend/success.html
@@ -123,7 +123,7 @@
           fetch(
             `${HOST}/api/payments/execute?paymentId=${paymentId}&payerId=${payerId}&courseId=${courseId}&userId=${userId}`,
             {
-              method: "POST",
+              method: "GET",
             }
           )
             .then((response) => console.log(response))
