--- a/Frontend/success.html
+++ b/Frontend/success.html
@@ -126,7 +126,7 @@
               method: "GET",
             }
           )
-            .then((response) => console.log(response))
+            .then((response) => response.json())
             .then((data) => {
               console.log("Response data:", data);
               if (data.status === "success") {
