--- a/Frontend/video.html
+++ b/Frontend/video.html
@@ -354,9 +354,9 @@
       </div>
     </footer>
 
-    <script src="/Frontend/js/api/Video.js"></script>
-    <script src="/Frontend/js/api/courseVideo.js"></script>
-    <script src="/Frontend/js/scripts/FileInputScript.js"></script>
+    <script src="./js/api/Video.js"></script>
+    <script src="./js/api/courseVideo.js"></script>
+    <script src="./js/scripts/FileInputScript.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
