add responsive to video view

--- a/Frontend/video.html
+++ b/Frontend/video.html
@@ -72,7 +72,7 @@
       </nav>
     </header>
 
-    <main class="container my-5 px-3 px-md-0" id="main-content">
+    <main class="container my-5 px-md-0" id="main-content">
       <div class="video-section container d-flex flex-column text-white">
         <div
           class="video-container bg-black rounded shadow"
