--- a/Frontend/library.html
+++ b/Frontend/library.html
@@ -102,41 +102,48 @@
   </head>
   <body>
     <main>
-      <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-        <div class="container d-flex">
-          <a class="navbar-brand" href="generalCursesStudent.html">
-            <img
-              src="assets/icons/devorbitLogo.png"
-              alt="DevOrbit Logo"
-              width="180"
-              class="d-inline-block align-text-top"
-            />
-          </a>
-
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item fw-semibold">
-              <a
-                class="nav-link"
-                href="#"
-                data-bs-toggle="modal"
-                data-bs-target="#profileModal"
-              >
-                Mi Perfil
-              </a>
-            </li>
-            <li class="nav-item fw-semibold">
-              <a class="nav-link" href="library.html">
-                <i class="bi bi-book"></i> Mi Biblioteca
-              </a>
-            </li>
-            <li class="nav-item fw-semibold">
-              <a class="nav-link" href="#" id="logoutLink">
-                <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <a class="navbar-brand" href="generalCursesStudent.html">
+        <img
+          src="assets/icons/devorbitLogo.png"
+          alt="DevOrbit Logo"
+          width="180"
+          class="d-inline-block align-text-top"
+        />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item fw-semibold">
+            <a
+              class="nav-link"
+              href="#"
+              data-bs-toggle="modal"
+              data-bs-target="#profileModal"
+            >
+              <i class="bi bi-person"></i> Perfil
+            </a>
+          </li>
+          <li class="nav-item fw-semibold">
+            <a class="nav-link" href="library.html">
+              <i class="bi bi-book"></i> Mi Biblioteca
+            </a>
+          </li>
+          <li class="nav-item fw-semibold">
+            <a class="nav-link" href="#" id="logoutLink">
+              <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
       <div class="container">
         <h1>Biblioteca</h1>
@@ -190,7 +197,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-      const HOST = "https://devorbit-vk2z.onrender.com/";
+      const HOST = "https://devorbit-vk2z.onrender.com";
       const TOKEN = localStorage.getItem("jwtToken");
 
       document.addEventListener("DOMContentLoaded", async () => {
