--- a/Frontend/generalCursesStudent.html
+++ b/Frontend/generalCursesStudent.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-
-
 </head>
 
 <body>
@@ -44,9 +42,11 @@
     </script>
 
 
-
-<nav class="navbar navbar-expand-lg navbar-light sticky-top bg-white">
-    <div class="container d-flex">
+<header id="header">
+  <nav
+    class="navbar navbar-expand-md navbar-light sticky-top bg-white shadow-sm"
+  >
+    <div class="container-fluid">
       <a class="navbar-brand" href="generalCursesStudent.html">
         <img
           src="assets/icons/devorbitLogo.png"
@@ -55,7 +55,15 @@
           class="d-inline-block align-text-top"
         />
       </a>
-
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item fw-semibold">
             <a
@@ -68,27 +76,20 @@
             </a>
           </li>
           <li class="nav-item fw-semibold">
-            <a
-              class="nav-link"
-              href="library.html"
-            >
-              <i class="bi bi-person"></i> Mi Biblioteca
+            <a class="nav-link" href="library.html">
+              <i class="bi bi-book"></i> Mi Biblioteca
             </a>
-        </li>
-        <li class="nav-item fw-semibold">
-          <a class="nav-link" href="CreateCourse.html" id="#createcurse">
-              <i class="bi bi-box-arrow-right"></i> Crear Curso
-          </a>
-      </li>
-        <li class="nav-item fw-semibold">
-          <a class="nav-link" href="#" id="logoutLink">
-            <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
-          </a>
-        </li>
-      </ul>
+          </li>
+          <li class="nav-item fw-semibold">
+            <a class="nav-link" href="#" id="logoutLink">
+              <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
-
+</header>
 
     
     <div class="modal fade" id="profileModal" tabindex="-1" aria-labelledby="profileModalLabel">
@@ -151,7 +152,7 @@
 
 
         <!-- Carrusel de cursos (MOVIDO AQUÍ) -->
-        <div class="container mt-4">
+        <div class="container mt-4" id="carousel">
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <div id="carouselCursos" class="carousel slide my-4" data-bs-ride="carousel" data-bs-wrap="true">
